--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 :root{
- --text-color:rgb(12,51,58)
+ --text-color:12,51,58
 }
 
 
 body{
   margin: 0;
   padding: 0;
-  color: var(--text-color)!important;
-    /*overflow-x: hidden;*/
+  color: rgb(var(--text-color));
 }
