--- a/src/Components/HomePage/Components/Filtering/Filtering.css
+++ b/src/Components/HomePage/Components/Filtering/Filtering.css
@@ -2,5 +2,28 @@
     position: absolute;
     width: 55%;
     height: 170px;
-    background-color: red;
+}
+
+
+.search_button{
+    width: 150px;
+    height: 45px;
+    background-color: rgb(var(--text-color));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: 500;
+    border-radius: 5px;
+    margin-top: 2vh;
+    cursor: pointer;
+}
+
+.home_page_filtering > div:last-child{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.search_button:hover{
+    background-color: rgb(11, 41, 46);
 }
