--- a/src/Components/HomePage/Components/Filtering/InputFilterField/InputFilterField.css
+++ b/src/Components/HomePage/Components/Filtering/InputFilterField/InputFilterField.css
@@ -5,10 +5,11 @@
 .input_filtering_field{
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr 2fr;
+    height: 65px;
 }
 
 .input_filtering_field div{
-    height: 65px;
+    /*height: 65px;*/
     border-right: 1px  solid rgba(150, 150, 150,0.3);
     background-color: white;
     display: flex;
