started crafting main carousel part in homepage

--- a/src/Components/HomePage/Components/Filtering/InputFilterField/MultipleSelectCheckmarks/MultipleSelectCheckmarks.css
+++ b/src/Components/HomePage/Components/Filtering/InputFilterField/MultipleSelectCheckmarks/MultipleSelectCheckmarks.css
@@ -21,7 +21,7 @@
     border-radius: 4px;
     padding: 10px!important;
     border: none!important;
-    flex-wrap: wrap;
+    flex-direction: column;
     z-index: 500;
     max-height: 200px;
     overflow-y: auto;
