--- a/src/Components/HomePage/Components/Filtering/Filtering.css
+++ b/src/Components/HomePage/Components/Filtering/Filtering.css
@@ -1,29 +1,33 @@
-.home_page_filtering{
-    position: absolute;
-    width: 55%;
-    height: 170px;
+.home_page_filtering {
+  position: absolute;
+  width: 55%;
+  height: 170px;
+  left: 50%;
+  bottom: 50%;
+  right: -50%;
+  transform: translate(-50%, 50%);
+  z-index: 2;
 }
 
-
-.search_button{
-    width: 150px;
-    height: 45px;
-    background-color: rgb(var(--text-color));
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: 500;
-    border-radius: 5px;
-    margin-top: 2vh;
-    cursor: pointer;
+.search_button {
+  width: 150px;
+  height: 45px;
+  background-color: rgb(var(--text-color));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: 500;
+  border-radius: 5px;
+  margin-top: 2vh;
+  cursor: pointer;
 }
 
-.home_page_filtering > div:last-child{
-    display: flex;
-    justify-content: flex-end;
+.home_page_filtering > div:last-child {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.search_button:hover{
-    background-color: rgb(11, 41, 46);
+.search_button:hover {
+  background-color: rgb(11, 41, 46);
 }
