--- a/src/Components/HomePage/Components/Filtering/Filtering.css
+++ b/src/Components/HomePage/Components/Filtering/Filtering.css
@@ -9,10 +9,21 @@
   z-index: 2;
 }
 
-.search_button {
+
+.filter_button{
+  width: 50px;
+  height: 45px;
+  background-color: rgb(122,141,51) ;
+  color: white!important;
+}
+
+.search_button{
   width: 150px;
   height: 45px;
   background-color: rgb(var(--text-color));
+}
+
+.single_button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,4 +41,8 @@
 
 .search_button:hover {
   background-color: rgb(11, 41, 46);
+}
+
+.filter_button:hover {
+  background-color:rgb(101, 117, 40) ;
 }
