--- a/src/Components/SalePage/SalePage.css
+++ b/src/Components/SalePage/SalePage.css
@@ -14,7 +14,7 @@
 }
 
 .sale_page_content article{
-    width: 70%;
+    width: 75%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -23,7 +23,7 @@
 
 
 .sale_page_content aside{
-    width: 30%;
-    height: 500px;
-    background-color: rgba(102,111,200,0.5);
+    width: 25%;
+    padding: 0 33px 33px;
+    box-sizing: border-box;
 }
