--- a/src/Components/HomePage/Components/Filtering/MoreFilter/MoreFilter.css
+++ b/src/Components/HomePage/Components/Filtering/MoreFilter/MoreFilter.css
@@ -21,3 +21,99 @@
     align-items: center;
     font-size: 23px;
 }
+
+/*.more_filter_content::-webkit-scrollbar{*/
+/*    display: none;*/
+/*}*/
+
+.more_filter_content {
+    width: 100%;
+    height: 478px;
+    box-sizing: border-box;
+    padding: 33px 70px 33px 150px;
+    overflow-y: auto;
+}
+
+.more_filter_range_part{
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin-top:2vh;
+}
+
+.more_filter_range_part > span:first-child{
+    font-size: 23px;
+}
+
+.more_filter_from_to{
+    display: flex;
+    gap: 50px;
+}
+
+.more_filter_from_to input{
+    width: 70px;
+    margin: 0 5px;
+}
+
+.more_filter_button_group{
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin-top:2vh;
+}
+
+.more_filter_button_group > span:first-child{
+    font-size: 23px;
+}
+
+.mf_button_part{
+    display: flex;
+    gap: 20px;
+}
+
+.mf_button_part button{
+    cursor: pointer;
+}
+
+.mf_single_check{
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin-top:2vh;
+}
+
+.mf_single_check > span:first-child{
+    font-size: 23px;
+}
+
+.multiple_checks{
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin-top:2vh;
+}
+
+.multiple_checks > span:first-child{
+    font-size: 23px;
+}
+
+.multiple_house_types_checks{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    gap: 20px;
+}
+
+.multiple_house_types_checks label{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.multiple_house_types_checks input{
+    width: 20px;
+    height: 20px;
+}
